fix(pdc-frontend): fix the spacing for the accordion item
this is a temporary solution until this [PR](https://github.com/nl-design-system/utrecht/pull/1968) get merged

--- a/apps/pdc-frontend/src/styles/globals.css
+++ b/apps/pdc-frontend/src/styles/globals.css
@@ -132,6 +132,10 @@ body {
   /* active focus */
   --utrecht-navigation-link-active-focus-color: var(--utrecht-color-black);
 
+  /* TODO: remove the css variables below when the accordion PR get merged from design system */
+  --utrecht-accordion-section-margin-block-start: 4px !important;
+  --utrecht-accordion-section-margin-block-end: 0 !important;
+
   /* --- navigation tokens end --- */
 
   margin-block: 0;
@@ -185,4 +189,9 @@ th {
 
 th > p {
   --utrecht-paragraph-font-weight: var(--utrecht-table-header-font-weight);
+}
+
+/* TODO: remove the css class below when the accordion PR get merged from design system */
+.utrecht-accordion__header {
+  --utrecht-space-around: 0;
 }
